# netaudit

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: allowlist-dsl.md  architecture.md  cli-reference.md  index.md  pytest-plugin.md
netaudit/: __init__.py  allowlist.py  cli.py  parser.py  reporter.py  runner.py
netaudit/integrations/: __init__.py  pytest_plugin.py
tests/: test_allowlist.py  test_cli.py  test_parser.py  test_plugin.py  test_reporter.py  test_version.py
tests/integration/: conftest.py  egress_target.py  test_end_to_end.py  test_plugin_integration.py
