[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netaudit"
version = "0.3.0"
description = "CI-native network egress auditing via strace"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "CyberSecAuto-Labs" }]
keywords = ["strace", "network", "security", "ci", "auditing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
urls = { Homepage = "https://github.com/CyberSecAuto-Labs/netaudit", Documentation = "https://netaudit.readthedocs.io" }
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
netaudit = "netaudit.cli:main"

[project.entry-points."pytest11"]
netaudit = "netaudit.integrations.pytest_plugin"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs-material>=9.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
markers = ["integration: mark test as requiring strace (Linux only)"]
addopts = "-p no:netaudit"
